Issue#22 Enable dark mode (#40)
* Issue#22 Enable dark mode

* gemfile fix double import

* Fix gemfile lock #95

* empty line #22

* empty line bis

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,13 @@ body {
   background-color: #fff;
 }
 
+@media (prefers-color-scheme: dark) {
+  body  {
+    background-color: rgb(32, 33, 36);
+    color: #E0E0E0;
+  }
+}
+
 .mtop2{
   margin-top: 20px;
 }
